# pulse_station_reference

./: CMakeLists.txt  SETUP.md  build.bat  build.sh  main.cpp  run.bat
md/: PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP.md
src/common/: AppColors.h  AppTheme.h  AudioFeedback.h  CustomButton.cpp  CustomButton.h  PillWidget.cpp  PillWidget.h  ScanPanel.cpp  ScanPanel.h  SnackBar.cpp  SnackBar.h  TouchScroll.cpp  TouchScroll.h
src/common/theme/: Builders.h  Buttons.h  Containers.h  Global.h  Icons.h  Labels.h  ThemePalette.h  Tokens.h
src/core/: BluetoothManager.cpp  BluetoothManager.h  DataModels.cpp  DataModels.h  SessionState.cpp  SessionState.h  ShotCorrelator.cpp  ShotCorrelator.h
src/training/data/: ReviewDataTypes.cpp  ReviewDataTypes.h  ScoringGuideData.h
src/training/engine/: FLED.cpp  FLED.h  FLED_drawAndWriteFunctions.cpp  dart_system.cpp  dart_system.h  main.cpp  scorer.cpp  scorer.h  target_zone_detector.cpp  target_zone_detector.h
src/training/ui/: CameraPanel.cpp  CameraPanel.h  TrainingPlaceholder.cpp  TrainingPlaceholder.h  TrainingScreen.cpp  TrainingScreen.h  TrainingWidget.cpp  TrainingWidget.h
src/ui/: MainWindow.cpp  MainWindow.h
src/ui/review/: AlbumLightboxScreen.cpp  AlbumLightboxScreen.h  ReviewPanel.cpp  ReviewPanel.h  SessionAlbumTab.cpp  SessionAlbumTab.h  SessionReviewScreen.cpp  SessionReviewScreen.h  SessionSummaryTab.cpp  SessionSummaryTab.h  ShoQReviewTab.cpp  ShoQReviewTab.h  ShotCountTab.cpp  ShotCountTab.h
src/ui/widgets/: BluetoothPanel.cpp  BluetoothPanel.h  ButtonGrid.cpp  ButtonGrid.h  ConsoleWidget.cpp  ConsoleWidget.h  HourglassWidget.cpp  HourglassWidget.h  QRPanel.cpp  QRPanel.h  ReviewScreen.cpp  ReviewScreen.h  ShotGridWidget.cpp  ShotGridWidget.h  StepFlow.cpp  StepFlow.h  SummaryBox.cpp  SummaryBox.h  TrainingPlaceholder.cpp  TrainingPlaceholder.h
